--- a/templates/nav.html
+++ b/templates/nav.html
@@ -21,7 +21,7 @@
                     <a href="/sending_profiles">Sending Profiles</a>
                 </li>
                 <li>
-                    <a href="/settings">Account Settings</span></a>
+                    <a href="/settings">Account Settings</a>
                 </li>
                 {{if .ModifySystem}}
                 <li>
